@@ -1,3 +1,8 @@
+2005-06-20  Robert Schuster  <robertschuster@fsfe.org>
+
+		* gnu/testlet/javax/swing/JDialog/setDefaultCloseOperation.java:
+		New test.
+
 2005-06-19  David Gilbert  <david.gilbert@object-refinery.com>
 
         * gnu/testlet/javax/swing/table/DefaultTableModel/constructors.java
